Update for deposit flow

--- a/IPSX/Flows/Funds/Storyboard/Deposit.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Deposit.storyboard
@@ -1105,6 +1105,7 @@ Please contact us at support@ip.sx if you have any queries about these Special T
                         <outlet property="addressLinkLabel" destination="NMr-cL-Xv4" id="x35-mf-r9T"/>
                         <outlet property="buyTokensButton" destination="010-iL-AAp" id="cag-B0-zje"/>
                         <outlet property="copyLinkButton" destination="gUo-XO-IZO" id="qaH-4X-WJI"/>
+                        <outlet property="createdAtLabel" destination="GvY-zu-jcO" id="mMj-YW-lfv"/>
                         <outlet property="loadingView" destination="7mO-yb-iu9" id="WZn-Qd-r4h"/>
                         <outlet property="topBarView" destination="lPi-Px-CdW" id="ihO-xK-3Ug"/>
                         <outlet property="topConstraintOutlet" destination="Ore-bN-SD2" id="2r7-xV-h36"/>
