--- a/IPSX/Flows/Funds/Storyboard/Base.lproj/TokenRequest.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Base.lproj/TokenRequest.storyboard
@@ -207,6 +207,31 @@
                                     <outlet property="delegate" destination="9x0-LF-Zd9" id="GqX-Qk-3k7"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tUv-3d-k9u" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
+                                <rect key="frame" x="15" y="389" width="345" height="44"/>
+                                <color key="backgroundColor" red="0.1647058824" green="0.67450980390000004" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="r1A-vF-F5q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="tintColor" red="0.16862745100000001" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Add personal wallet">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="activeColor">
+                                        <color key="value" red="0.1647058824" green="0.67450980390000004" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="NYZ-l1-ppk" kind="presentation" id="ebU-DC-Zs8"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xna-OU-vYh" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="165.66666666666666" y="389" width="44" height="44"/>
                                 <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -223,6 +248,7 @@
                             <constraint firstItem="Cm1-31-EpC" firstAttribute="bottom" secondItem="cOM-dK-uZM" secondAttribute="bottom" id="6Oy-Sb-pZi"/>
                             <constraint firstItem="Xna-OU-vYh" firstAttribute="centerX" secondItem="Cm1-31-EpC" secondAttribute="centerX" id="6Yv-IV-xnk"/>
                             <constraint firstItem="fqy-AL-kfs" firstAttribute="leading" secondItem="Cm1-31-EpC" secondAttribute="leading" id="76Q-kK-QIU"/>
+                            <constraint firstItem="tUv-3d-k9u" firstAttribute="leading" secondItem="Cm1-31-EpC" secondAttribute="leading" constant="15" id="8K9-XV-SC1"/>
                             <constraint firstItem="cOM-dK-uZM" firstAttribute="top" secondItem="YI5-I1-vzb" secondAttribute="bottom" constant="13" id="9ib-0B-4k0"/>
                             <constraint firstItem="Cm1-31-EpC" firstAttribute="trailing" secondItem="HGt-lo-kkP" secondAttribute="trailing" constant="16" id="9qj-1T-h8V"/>
                             <constraint firstItem="Cm1-31-EpC" firstAttribute="trailing" secondItem="cOM-dK-uZM" secondAttribute="trailing" id="Cvr-yA-M39"/>
@@ -230,11 +256,13 @@
                             <constraint firstItem="Cm1-31-EpC" firstAttribute="trailing" secondItem="jXc-1c-sUJ" secondAttribute="trailing" id="Dly-E1-dU4"/>
                             <constraint firstItem="HGt-lo-kkP" firstAttribute="top" secondItem="YI5-I1-vzb" secondAttribute="bottom" constant="27" id="EFJ-lQ-vmw"/>
                             <constraint firstItem="K3P-wJ-EsW" firstAttribute="leading" secondItem="Cm1-31-EpC" secondAttribute="leading" id="Hr4-Er-Yv9"/>
+                            <constraint firstItem="tUv-3d-k9u" firstAttribute="centerY" secondItem="Cm1-31-EpC" secondAttribute="centerY" id="Ik2-o0-sYu"/>
                             <constraint firstItem="YI5-I1-vzb" firstAttribute="top" secondItem="tri-Ec-HJv" secondAttribute="bottom" constant="26.5" id="Kea-KM-KrQ"/>
                             <constraint firstItem="cOM-dK-uZM" firstAttribute="leading" secondItem="Cm1-31-EpC" secondAttribute="leading" id="fbX-33-L0j"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="YI5-I1-vzb" secondAttribute="trailing" constant="20" symbolic="YES" id="gWv-2f-I3S"/>
                             <constraint firstItem="HGt-lo-kkP" firstAttribute="leading" secondItem="Cm1-31-EpC" secondAttribute="leading" constant="16" id="gZc-cM-e7A"/>
                             <constraint firstItem="tri-Ec-HJv" firstAttribute="top" secondItem="fqy-AL-kfs" secondAttribute="bottom" id="itf-A7-p2M"/>
+                            <constraint firstItem="Cm1-31-EpC" firstAttribute="trailing" secondItem="tUv-3d-k9u" secondAttribute="trailing" constant="15" id="k3j-RN-qcX"/>
                             <constraint firstItem="Cm1-31-EpC" firstAttribute="top" secondItem="fqy-AL-kfs" secondAttribute="top" constant="50" id="kZ8-Mj-hYZ"/>
                             <constraint firstItem="Cm1-31-EpC" firstAttribute="trailing" secondItem="K3P-wJ-EsW" secondAttribute="trailing" id="kvk-Bi-Jep"/>
                             <constraint firstItem="Xna-OU-vYh" firstAttribute="centerY" secondItem="Cm1-31-EpC" secondAttribute="centerY" id="leW-yQ-bka"/>
@@ -247,6 +275,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="m9f-76-UO4"/>
                     <connections>
+                        <outlet property="addWalletButton" destination="tUv-3d-k9u" id="zFA-eq-usi"/>
                         <outlet property="loadingView" destination="Xna-OU-vYh" id="yOr-ve-XE1"/>
                         <outlet property="noItemsLabel" destination="HGt-lo-kkP" id="dlq-Lg-6tb"/>
                         <outlet property="separatorView" destination="jXc-1c-sUJ" id="KlJ-6w-Nec"/>
@@ -261,6 +290,14 @@
                 <exit id="lDk-bw-qv3" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="7572" y="-155.17241379310346"/>
+        </scene>
+        <!--WalletAdd-->
+        <scene sceneID="Vfo-p4-5G6">
+            <objects>
+                <viewControllerPlaceholder storyboardName="WalletAdd" id="NYZ-l1-ppk" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PuN-uA-J6t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7571" y="267"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7QT-Sd-zRa">
