--- a/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
+++ b/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
@@ -741,7 +741,7 @@
                                             <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="pb5-dt-7Uq" kind="unwind" unwindAction="unwindToTabBarWithSegue:" id="pMW-Tj-WOt"/>
+                                            <action selector="closeButton:" destination="JSj-Y7-K1p" eventType="touchUpInside" id="2WT-oJ-DWi"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Manage Wallets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8R-0x-4TT">
@@ -933,7 +933,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mDF-3e-Kg6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="pb5-dt-7Uq" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="4261.6000000000004" y="-322.48875562218893"/>
         </scene>
@@ -1230,6 +1229,6 @@
         <image name="walletLarge" width="51" height="51.666667938232422"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="VIp-L5-DOc"/>
+        <segue reference="kox-f1-XBp"/>
     </inferredMetricsTieBreakers>
 </document>
