--- a/IPSX/Flows/Funds/Storyboard/Withdrawal.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Withdrawal.storyboard
@@ -110,14 +110,33 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press New Withdrawal to move your IPSX tokens to your private wallet" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZ0-9q-DSm">
+                                            <rect key="frame" x="16" y="160" width="343" height="31.333333333333343"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" red="0.43921568630000002" green="0.43921568630000002" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iKl-R0-jr0" userLabel="Separator">
+                                            <rect key="frame" x="0.0" y="150.66666666666666" width="375" height="0.33333333333334281"/>
+                                            <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="0.5" id="seX-0K-mHH"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
+                                        <constraint firstItem="iKl-R0-jr0" firstAttribute="leading" secondItem="aeQ-do-xpg" secondAttribute="leading" id="A6O-56-11T"/>
+                                        <constraint firstAttribute="trailing" secondItem="iKl-R0-jr0" secondAttribute="trailing" id="DXw-s3-xJX"/>
                                         <constraint firstAttribute="bottom" secondItem="AnD-QY-AmM" secondAttribute="bottom" constant="15" id="DxY-y7-R09"/>
+                                        <constraint firstAttribute="trailing" secondItem="gZ0-9q-DSm" secondAttribute="trailing" constant="16" id="IpI-EU-bVv"/>
+                                        <constraint firstItem="gZ0-9q-DSm" firstAttribute="top" secondItem="AnD-QY-AmM" secondAttribute="bottom" constant="24" id="KMd-gk-m03"/>
                                         <constraint firstItem="AnD-QY-AmM" firstAttribute="leading" secondItem="aeQ-do-xpg" secondAttribute="leading" constant="15" id="RcU-eN-wD1"/>
                                         <constraint firstItem="l7e-Hk-SF6" firstAttribute="leading" secondItem="aeQ-do-xpg" secondAttribute="leading" constant="15" id="TIa-oB-7OQ"/>
                                         <constraint firstAttribute="trailing" secondItem="l7e-Hk-SF6" secondAttribute="trailing" constant="15" id="WR4-fB-eD6"/>
                                         <constraint firstItem="l7e-Hk-SF6" firstAttribute="top" secondItem="aeQ-do-xpg" secondAttribute="top" constant="25" id="fV3-4Q-OtY"/>
+                                        <constraint firstAttribute="bottom" secondItem="iKl-R0-jr0" secondAttribute="bottom" id="kWU-p7-lrw"/>
+                                        <constraint firstItem="gZ0-9q-DSm" firstAttribute="leading" secondItem="aeQ-do-xpg" secondAttribute="leading" constant="16" id="m7T-xU-aUW"/>
                                     </constraints>
                                 </view>
                                 <prototypes>
@@ -297,7 +316,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="MM4-s8-iak"/>
                     <connections>
+                        <outlet property="contentSeparator" destination="iKl-R0-jr0" id="Mc8-Mh-jfC"/>
                         <outlet property="loadingView" destination="xQA-oU-XKz" id="wdm-9N-xHf"/>
+                        <outlet property="noDataLabel" destination="gZ0-9q-DSm" id="NAp-5j-D0n"/>
                         <outlet property="separatorView" destination="7hV-pG-K3B" id="pjp-cv-UcQ"/>
                         <outlet property="tableView" destination="cSu-qZ-Jed" id="bGv-S1-8hR"/>
                         <outlet property="topBarView" destination="L67-o9-6B6" id="CUT-h3-YLb"/>
@@ -852,10 +873,19 @@
                                     <action selector="submitAction:" destination="Jcd-2G-rma" eventType="touchUpInside" id="4gM-Pr-iUH"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Dq-Ci-axb" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
+                                <rect key="frame" x="165.66666666666666" y="389" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="pM0-hs-ekb"/>
+                                    <constraint firstAttribute="height" constant="44" id="y4x-02-q8t"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="hFO-4x-Gxv" firstAttribute="top" secondItem="8Br-og-SL1" secondAttribute="bottom" id="04c-i4-BjU"/>
+                            <constraint firstItem="1Dq-Ci-axb" firstAttribute="centerY" secondItem="Trk-Q5-mGa" secondAttribute="centerY" id="2Gj-bH-beC"/>
                             <constraint firstItem="ln6-pw-a5W" firstAttribute="leading" secondItem="Trk-Q5-mGa" secondAttribute="leading" constant="15" id="4fi-jo-3Ty"/>
                             <constraint firstItem="ln6-pw-a5W" firstAttribute="top" secondItem="n70-70-p6Y" secondAttribute="bottom" constant="25" id="4gT-3d-c2g"/>
                             <constraint firstItem="5sZ-eG-fTa" firstAttribute="leading" secondItem="Trk-Q5-mGa" secondAttribute="leading" id="8ve-r9-CU2"/>
@@ -870,6 +900,7 @@
                             <constraint firstItem="n70-70-p6Y" firstAttribute="centerY" secondItem="Trk-Q5-mGa" secondAttribute="centerY" id="af0-wc-Lo9"/>
                             <constraint firstItem="hFO-4x-Gxv" firstAttribute="leading" secondItem="8Br-og-SL1" secondAttribute="leading" id="ba3-Do-OQ9"/>
                             <constraint firstItem="n70-70-p6Y" firstAttribute="trailing" secondItem="Trk-Q5-mGa" secondAttribute="trailing" id="eAm-6I-x2g"/>
+                            <constraint firstItem="1Dq-Ci-axb" firstAttribute="centerX" secondItem="Trk-Q5-mGa" secondAttribute="centerX" id="rAK-SN-hp6"/>
                             <constraint firstItem="Trk-Q5-mGa" firstAttribute="top" secondItem="8Br-og-SL1" secondAttribute="top" constant="50" id="rv5-du-YCU"/>
                             <constraint firstItem="hFO-4x-Gxv" firstAttribute="trailing" secondItem="8Br-og-SL1" secondAttribute="trailing" id="uSW-2D-qw2"/>
                             <constraint firstItem="Trk-Q5-mGa" firstAttribute="trailing" secondItem="ln6-pw-a5W" secondAttribute="trailing" constant="15" id="wXX-RI-0oP"/>
@@ -879,6 +910,7 @@
                     <navigationItem key="navigationItem" id="P3t-n1-bwc"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="loadingView" destination="1Dq-Ci-axb" id="njQ-bU-Kuf"/>
                         <outlet property="priceIPSXLabel" destination="J3s-bh-QoY" id="R8D-PE-S6s"/>
                         <outlet property="priceUSDLabel" destination="pZf-cl-nCg" id="n8t-MG-vcp"/>
                         <outlet property="separatorView" destination="hFO-4x-Gxv" id="Hcd-OO-Qas"/>
