--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -262,9 +262,13 @@
                                             <constraint firstAttribute="width" constant="44" id="KJ8-bk-mTc"/>
                                             <constraint firstAttribute="height" constant="44" id="wzd-QL-1W5"/>
                                         </constraints>
-                                        <state key="normal" image="savedFav">
+                                        <state key="normal" image="favorites">
                                             <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <state key="selected" image="savedFav"/>
+                                        <connections>
+                                            <action selector="favoritesAction:" destination="sBJ-Zc-YxA" eventType="touchUpInside" id="OaM-Ct-FQK"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="czV-6Q-iFg" customClass="ProgressRoundView" customModule="IPSX" customModuleProvider="target">
                                         <rect key="frame" x="311" y="124" width="53" height="53"/>
@@ -774,6 +778,7 @@
                         <outlet property="collectionView" destination="91H-v7-tup" id="mWJ-QK-wYE"/>
                         <outlet property="countryLabel" destination="iaD-KF-yzr" id="GKv-i2-8np"/>
                         <outlet property="durationLabel" destination="e5n-iy-Llb" id="Z8X-ai-L6b"/>
+                        <outlet property="favoritesButton" destination="dZ2-11-Xgd" id="o9g-Ui-oso"/>
                         <outlet property="flagImageView" destination="N49-i0-cE3" id="BWO-j1-lqT"/>
                         <outlet property="loadingView" destination="emp-3q-qBf" id="vZB-ni-gBG"/>
                         <outlet property="noOfProxiesLabel" destination="tF8-MN-aOu" id="gWO-9t-mu1"/>
@@ -3327,6 +3332,7 @@ maximum 5 minutes after purchase!</string>
         <image name="clock" width="14" height="14.333333015441895"/>
         <image name="closeSmall" width="13.666666984558105" height="13.666666984558105"/>
         <image name="cloudComputing" width="17" height="14"/>
+        <image name="favorites" width="19.666666030883789" height="17.333333969116211"/>
         <image name="favoritesSmall" width="15" height="13.333333015441895"/>
         <image name="garbageWhite" width="18" height="20.333333969116211"/>
         <image name="inclinedPaperPlane" width="17.666666030883789" height="14.333333015441895"/>
@@ -3342,6 +3348,6 @@ maximum 5 minutes after purchase!</string>
         <image name="walletLarge" width="51" height="51.666667938232422"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="7DU-41-qQy"/>
+        <segue reference="6eO-CG-Oxt"/>
     </inferredMetricsTieBreakers>
 </document>
