Hide unneeded cell decorators in cart screen

--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -1109,7 +1109,7 @@
                                                             <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cartSmall" translatesAutoresizingMaskIntoConstraints="NO" id="w9a-6u-qd3">
+                                                        <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cartSmall" translatesAutoresizingMaskIntoConstraints="NO" id="w9a-6u-qd3">
                                                             <rect key="frame" x="194" y="17.666666666666668" width="12" height="13"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="13" id="8PQ-Sp-ZCV"/>
@@ -1154,7 +1154,7 @@
                                                             <color key="textColor" red="0.066666666669999999" green="0.066666666669999999" blue="0.066666666669999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoritesSmall" translatesAutoresizingMaskIntoConstraints="NO" id="qjG-Mu-BmG">
+                                                        <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoritesSmall" translatesAutoresizingMaskIntoConstraints="NO" id="qjG-Mu-BmG">
                                                             <rect key="frame" x="318.66666666666669" y="51.666666666666664" width="15" height="12.999999999999993"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="15" id="5ar-sc-awr"/>
@@ -3348,6 +3348,6 @@ maximum 5 minutes after purchase!</string>
         <image name="walletLarge" width="51" height="51.666667938232422"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="6eO-CG-Oxt"/>
+        <segue reference="7DU-41-qQy"/>
     </inferredMetricsTieBreakers>
 </document>
