--- a/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
@@ -13,7 +13,7 @@
         <!--Dashboard Details Controller-->
         <scene sceneID="rlG-dG-COx">
             <objects>
-                <viewController storyboardIdentifier="DashboardDetailsID" hidesBottomBarWhenPushed="YES" id="uMo-jK-dNo" customClass="DashboardDetailsController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DashboardDetailsID" id="uMo-jK-dNo" customClass="DashboardDetailsController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sKb-T8-UIk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1877,6 +1877,6 @@
         <image name="shield" width="13.666666984558105" height="16.666666030883789"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Jna-kb-2Wd"/>
+        <segue reference="7gT-9J-GNb"/>
     </inferredMetricsTieBreakers>
 </document>
