--- a/IPSX/Flows/Funds/Storyboard/Deposit.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Deposit.storyboard
@@ -13,7 +13,7 @@
         <!--Deposit List Controller-->
         <scene sceneID="w8l-xR-bwY">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="v0F-n9-oxs" customClass="DepositListController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="v0F-n9-oxs" customClass="DepositListController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="za1-IL-cTs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
