--- a/IPSX/Flows/Funds/Storyboard/Funds.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Funds.storyboard
@@ -13,7 +13,7 @@
         <!--Refer Friend Controller-->
         <scene sceneID="WzV-RP-Shl">
             <objects>
-                <viewController storyboardIdentifier="ReferFriendID" hidesBottomBarWhenPushed="YES" id="JMt-ic-7J1" customClass="ReferFriendController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ReferFriendID" id="JMt-ic-7J1" customClass="ReferFriendController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="C0h-vH-kg9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -191,7 +191,7 @@
         <!--Refund List Controller-->
         <scene sceneID="FTr-AU-sbU">
             <objects>
-                <viewController storyboardIdentifier="RefundControllerID" hidesBottomBarWhenPushed="YES" id="NVv-1e-Gau" customClass="RefundListController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RefundControllerID" id="NVv-1e-Gau" customClass="RefundListController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pwy-sG-l0Z">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
