--- a/IPSX/Flows/Funds/Storyboard/Withdrawal.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Withdrawal.storyboard
@@ -13,7 +13,7 @@
         <!--Withdrawal List Controller-->
         <scene sceneID="KAp-of-oV6">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="hSl-O7-2qu" customClass="WithdrawalListController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hSl-O7-2qu" customClass="WithdrawalListController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Jj-ld-5bw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
