--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -135,7 +135,7 @@
         <!--Market Item Controller-->
         <scene sceneID="Mcq-DL-sxl">
             <objects>
-                <viewController storyboardIdentifier="MarketItemID" hidesBottomBarWhenPushed="YES" id="sBJ-Zc-YxA" customClass="MarketItemController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MarketItemID" id="sBJ-Zc-YxA" customClass="MarketItemController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jNT-25-Xbm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -810,7 +810,7 @@
         <!--Market Cart Controller-->
         <scene sceneID="99t-L6-ol4">
             <objects>
-                <viewController storyboardIdentifier="MarketcartlID" hidesBottomBarWhenPushed="YES" id="i3b-eM-f4N" customClass="MarketCartController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MarketcartlID" id="i3b-eM-f4N" customClass="MarketCartController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1wZ-FL-xDU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
