Update for history screen data request

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                 <viewControllerPlaceholder storyboardName="Dashboard" id="U5d-SP-6Uu" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BZV-BO-7Di" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1011" y="1606"/>
+            <point key="canvasLocation" x="-968" y="1609"/>
         </scene>
         <!--OrderControllerID-->
         <scene sceneID="Ld7-OK-TGl">
@@ -2256,7 +2256,7 @@ and rent your first proxy.</string>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                         <state key="normal" image="history"/>
                                         <connections>
-                                            <segue destination="U5d-SP-6Uu" kind="presentation" id="CyX-fU-6VS"/>
+                                            <segue destination="U5d-SP-6Uu" kind="presentation" identifier="HistorySegueID" id="CyX-fU-6VS"/>
                                         </connections>
                                     </button>
                                 </subviews>
